☢️ COMMIT BOMB - Updated for 1.18.1 + Changed whole project to LF line endings. ☣️