@@ -1,31 +1,31 @@
 package com.ultreon.randomthingz.compat.jei;
 
-import com.mojang.blaze3d.matrix.PoseStack;
+import com.mojang.blaze3d.vertex.PoseStack;
 import com.mojang.datafixers.util.Pair;
-import com.ultreon.modlib.embedded.silentlib.util.TextRenderUtils;
+import com.ultreon.modlib.silentlib.util.TextRenderUtils;
 import com.ultreon.randomthingz.block._common.ModBlocks;
 import com.ultreon.randomthingz.block.machines.crusher.CrusherScreen;
 import com.ultreon.randomthingz.item.crafting.CrushingRecipe;
 import com.ultreon.randomthingz.util.Constants;
 import com.ultreon.randomthingz.util.TextUtils;
 import mezz.jei.api.constants.VanillaTypes;
-import mezz.jei.api.gui.IRecipeLayout;
+import mezz.jei.api.gui.builder.IRecipeLayoutBuilder;
+import mezz.jei.api.gui.builder.IRecipeSlotBuilder;
 import mezz.jei.api.gui.drawable.IDrawable;
 import mezz.jei.api.gui.drawable.IDrawableAnimated;
-import mezz.jei.api.gui.ingredient.IGuiItemStackGroup;
+import mezz.jei.api.gui.ingredient.IRecipeSlotsView;
 import mezz.jei.api.helpers.IGuiHelper;
-import mezz.jei.api.ingredients.IIngredients;
+import mezz.jei.api.recipe.IFocusGroup;
+import mezz.jei.api.recipe.RecipeIngredientRole;
 import mezz.jei.api.recipe.category.IRecipeCategory;
 import net.minecraft.client.Minecraft;
-import net.minecraft.client.gui.FontRenderer;
-import net.minecraft.inventory.Inventory;
+import net.minecraft.client.gui.Font;
+import net.minecraft.network.chat.Component;
+import net.minecraft.network.chat.MutableComponent;
+import net.minecraft.network.chat.TextComponent;
 import net.minecraft.resources.ResourceLocation;
-import net.minecraft.util.text.StringTextComponent;
 import net.minecraft.world.item.ItemStack;
 
-import java.util.ArrayList;
-import java.util.Arrays;
-import java.util.Collections;
 import java.util.List;
 
 public class CrushingRecipeCategoryJei implements IRecipeCategory<CrushingRecipe> {
@@ -37,14 +37,14 @@ public class CrushingRecipeCategoryJei implements IRecipeCategory<CrushingRecipe
     private final IDrawable background;
     private final IDrawable icon;
     private final IDrawableAnimated arrow;
-    private final String localizedName;
+    private final MutableComponent title;
 
     public CrushingRecipeCategoryJei(IGuiHelper guiHelper) {
         background = guiHelper.createDrawable(CrusherScreen.TEXTURE, GUI_START_X, GUI_START_Y, GUI_WIDTH, GUI_HEIGHT);
-        icon = guiHelper.createDrawableIngredient(new ItemStack(ModBlocks.CRUSHER));
+        icon = guiHelper.createDrawableIngredient(VanillaTypes.ITEM, new ItemStack(ModBlocks.CRUSHER));
         arrow = guiHelper.drawableBuilder(CrusherScreen.TEXTURE, 176, 14, 24, 17)
                 .buildAnimated(200, IDrawableAnimated.StartDirection.LEFT, false);
-        localizedName = TextUtils.translate("jei", "category.crushing").getString();
+        title = TextUtils.translate("jei", "category.crushing");
     }
 
     @Override
@@ -58,8 +58,8 @@ public class CrushingRecipeCategoryJei implements IRecipeCategory<CrushingRecipe
     }
 
     @Override
-    public String getTitle() {
-        return localizedName;
+    public Component getTitle() {
+        return title;
     }
 
     @Override
@@ -73,35 +73,30 @@ public class CrushingRecipeCategoryJei implements IRecipeCategory<CrushingRecipe
     }
 
     @Override
-    public void setIngredients(CrushingRecipe recipe, IIngredients ingredients) {
-        ingredients.setInputIngredients(Collections.singletonList(recipe.getIngredient()));
-        ingredients.setOutputs(VanillaTypes.ITEM, new ArrayList<>(recipe.getPossibleResults(new Inventory(5))));
-    }
+    public void setRecipe(IRecipeLayoutBuilder builder, CrushingRecipe recipe, IFocusGroup ingredients) {
+        builder.addSlot(RecipeIngredientRole.INPUT, 0, 0).addItemStacks(List.of(recipe.getIngredient().getItems()));
+        IRecipeSlotBuilder[] outputs = new IRecipeSlotBuilder[]{
+                builder.addSlot(RecipeIngredientRole.OUTPUT, 54, 0),
+                builder.addSlot(RecipeIngredientRole.OUTPUT, 72, 0),
+                builder.addSlot(RecipeIngredientRole.OUTPUT, 90, 0),
+                builder.addSlot(RecipeIngredientRole.OUTPUT, 108, 0),
+        };
 
-    @Override
-    public void setRecipe(IRecipeLayout recipeLayout, CrushingRecipe recipe, IIngredients ingredients) {
-        IGuiItemStackGroup itemStacks = recipeLayout.getItemStacks();
-        itemStacks.init(0, true, 0, 0);
-        itemStacks.init(1, false, 54, 0);
-        itemStacks.init(2, false, 72, 0);
-        itemStacks.init(3, false, 90, 0);
-        itemStacks.init(4, false, 108, 0);
-
-        // Should only be one ingredient...
-//        recipe.getIngredients().forEach(ing -> itemStacks.set(0, Arrays.asList(ing.getMatchingStacks())));
-        itemStacks.set(0, Arrays.asList(recipe.getIngredient().getMatchingStacks()));
         // Outputs
         List<Pair<ItemStack, Float>> results = recipe.getPossibleResultsWithChances();
         for (int i = 0; i < results.size(); ++i) {
-            itemStacks.set(i + 1, results.get(i).getFirst());
+            if (i >= outputs.length) {
+                break;
+            }
+            outputs[i].addItemStack(results.get(i).getFirst());
         }
     }
 
     @Override
-    public void draw(CrushingRecipe recipe, PoseStack matrixStack, double mouseX, double mouseY) {
-        arrow.draw(matrixStack, 49 - GUI_START_X, 35 - GUI_START_Y);
+    public void draw(CrushingRecipe recipe, IRecipeSlotsView slotsView, PoseStack pose, double mouseX, double mouseY) {
+        arrow.draw(pose, 49 - GUI_START_X, 35 - GUI_START_Y);
 
-        FontRenderer font = Minecraft.getInstance().fontRenderer;
+        Font font = Minecraft.getInstance().font;
 
         List<Pair<ItemStack, Float>> results = recipe.getPossibleResultsWithChances();
         for (int i = 0; i < results.size(); ++i) {
@@ -109,7 +104,7 @@ public class CrushingRecipeCategoryJei implements IRecipeCategory<CrushingRecipe
             if (chance < 1) {
                 int asPercent = (int) (100 * chance);
                 String text = asPercent < 1 ? "<1%" : asPercent + "%";
-                TextRenderUtils.renderScaled(matrixStack, font, new StringTextComponent(text).getVisualOrderText(), 57 + 18 * i, 20, 0.75f, 0xFFFFFF, true);
+                TextRenderUtils.renderScaled(pose, font, new TextComponent(text).getVisualOrderText(), 57 + 18 * i, 20, .75f, 0xFFFFFF, true);
             }
         }
     }
