@@ -1,29 +1,29 @@
 package com.ultreon.randomthingz.compat.jei;
 
-import com.mojang.blaze3d.matrix.PoseStack;
-import com.ultreon.modlib.embedded.silentlib.util.TextRenderUtils;
+import com.mojang.blaze3d.vertex.PoseStack;
+import com.ultreon.modlib.silentlib.util.TextRenderUtils;
 import com.ultreon.randomthingz.block._common.ModBlocks;
 import com.ultreon.randomthingz.block.machines.compressor.CompressorScreen;
 import com.ultreon.randomthingz.item.crafting.DryingRecipe;
 import com.ultreon.randomthingz.util.Constants;
 import com.ultreon.randomthingz.util.TextUtils;
 import mezz.jei.api.constants.VanillaTypes;
-import mezz.jei.api.gui.IRecipeLayout;
+import mezz.jei.api.gui.builder.IRecipeLayoutBuilder;
 import mezz.jei.api.gui.drawable.IDrawable;
 import mezz.jei.api.gui.drawable.IDrawableAnimated;
-import mezz.jei.api.gui.ingredient.IGuiItemStackGroup;
+import mezz.jei.api.gui.ingredient.IRecipeSlotsView;
 import mezz.jei.api.helpers.IGuiHelper;
-import mezz.jei.api.ingredients.IIngredients;
+import mezz.jei.api.recipe.IFocusGroup;
+import mezz.jei.api.recipe.RecipeIngredientRole;
 import mezz.jei.api.recipe.category.IRecipeCategory;
 import net.minecraft.client.Minecraft;
-import net.minecraft.client.gui.FontRenderer;
+import net.minecraft.client.gui.Font;
 import net.minecraft.network.chat.Component;
+import net.minecraft.network.chat.MutableComponent;
 import net.minecraft.resources.ResourceLocation;
 import net.minecraft.world.item.ItemStack;
 
-import java.util.ArrayList;
-import java.util.Arrays;
-import java.util.Collections;
+import java.util.List;
 
 public class DryingRecipeCategoryJei implements IRecipeCategory<DryingRecipe> {
     private static final int GUI_START_X = 55;
@@ -34,14 +34,14 @@ public class DryingRecipeCategoryJei implements IRecipeCategory<DryingRecipe> {
     private final IDrawable background;
     private final IDrawable icon;
     private final IDrawableAnimated arrow;
-    private final String localizedName;
+    private final MutableComponent title;
 
     public DryingRecipeCategoryJei(IGuiHelper guiHelper) {
         background = guiHelper.createDrawable(CompressorScreen.TEXTURE, GUI_START_X, GUI_START_Y, GUI_WIDTH, GUI_HEIGHT);
-        icon = guiHelper.createDrawableIngredient(new ItemStack(ModBlocks.OAK_DRYING_RACK));
+        icon = guiHelper.createDrawableIngredient(VanillaTypes.ITEM, new ItemStack(ModBlocks.OAK_DRYING_RACK));
         arrow = guiHelper.drawableBuilder(CompressorScreen.TEXTURE, 176, 14, 24, 17)
                 .buildAnimated(200, IDrawableAnimated.StartDirection.LEFT, false);
-        localizedName = TextUtils.translate("jei", "category.drying").getString();
+        title = TextUtils.translate("jei", "category.drying");
     }
 
     @Override
@@ -55,8 +55,8 @@ public class DryingRecipeCategoryJei implements IRecipeCategory<DryingRecipe> {
     }
 
     @Override
-    public String getTitle() {
-        return localizedName;
+    public Component getTitle() {
+        return title;
     }
 
     @Override
@@ -68,28 +68,17 @@ public class DryingRecipeCategoryJei implements IRecipeCategory<DryingRecipe> {
     public IDrawable getIcon() {
         return icon;
     }
-
     @Override
-    public void setIngredients(DryingRecipe recipe, IIngredients ingredients) {
-        ingredients.setInputIngredients(Collections.singletonList(recipe.getIngredient()));
-        ingredients.setOutput(VanillaTypes.ITEM, recipe.getRecipeOutput());
+    public void setRecipe(IRecipeLayoutBuilder builder, DryingRecipe recipe, IFocusGroup ingredients) {
+        builder.addSlot(RecipeIngredientRole.INPUT, 55 - GUI_START_X, 34 - GUI_START_Y).addItemStacks(List.of(recipe.getIngredient().getItems()));
+        builder.addSlot(RecipeIngredientRole.OUTPUT, 55 - GUI_START_X, 34 - GUI_START_Y).addItemStack(recipe.getResultItem());
     }
 
     @Override
-    public void setRecipe(IRecipeLayout recipeLayout, DryingRecipe recipe, IIngredients ingredients) {
-        IGuiItemStackGroup itemStacks = recipeLayout.getItemStacks();
-        itemStacks.init(0, true, 55 - GUI_START_X, 34 - GUI_START_Y);
-        itemStacks.init(1, false, 115 - GUI_START_X, 34 - GUI_START_Y);
-
-        itemStacks.set(0, new ArrayList<>(Arrays.asList(recipe.getIngredient().getMatchingStacks())));
-        itemStacks.set(1, recipe.getRecipeOutput());
-    }
-
-    @Override
-    public void draw(DryingRecipe recipe, PoseStack matrixStack, double mouseX, double mouseY) {
-        arrow.draw(matrixStack, 79 - GUI_START_X, 35 - GUI_START_Y);
-        FontRenderer font = Minecraft.getInstance().fontRenderer;
+    public void draw(DryingRecipe recipe, IRecipeSlotsView slotsView, PoseStack pose, double mouseX, double mouseY) {
+        arrow.draw(pose, 79 - GUI_START_X, 35 - GUI_START_Y);
+        Font font = Minecraft.getInstance().font;
         Component text = TextUtils.translate("misc", "timeInSeconds", recipe.getProcessTime() / 20);
-        TextRenderUtils.renderScaled(matrixStack, font, text.getVisualOrderText(), 24, 20, 0.67f, 0xFFFFFF, true);
+        TextRenderUtils.renderScaled(pose, font, text.getVisualOrderText(), 24, 20, .67f, 0xFFFFFF, true);
     }
 }
